--- a/_data/programming-skills.yml
+++ b/_data/programming-skills.yml
@@ -1,11 +1,11 @@
-- name: HTML5/CSS3
+- name: Python
   percentage: 90
   color: danger
 
-- name: Go
+- name: C++
   percentage: 80
   color:
 
-- name: Python
+- name: SQL
   percentage: 70
   color: secondary
