--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : Jayashanmuhesh Rajasekar
-  image             : https://i.imgur.com/uyDNQnn.jpg
+  image             : assets/mypic.jpg
   # behance           : your_username
 # dribbble          : your_username
   email             : rajasekar.j@northeastern.edu
