--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,17 +1,23 @@
-- title: Student, Harvard CS
-  from: 2014
-  to: 2018
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-               nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-               reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-
-- title: Software Engineer, Google, UK
-  from: 2018
+- title: Student, Northeasetern University, Health Informatics
+  from: 2024
   to: present
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-               nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-               reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+  description: I am currently pursuing my masters in Health Informatics.
+               I have a keen interest in using ML in healthcare. I have worked on 
+               using RAG to create a Clinical Trials documents assistant.
+
+- title: Data Engineer, LTIMindtree
+  from: 2021
+  to: 2023
+  description: It was my first job. I was happy to get into Data. I got to dabble
+               in many aspects of Data and ML. I was initially in the MLOPS Center of Excellence.
+
+
+- title: IIT Bombay, Material Science
+  from: 2017
+  to: 2021
+  description: My bachelors was in Metallurgy and Material Science. To be hones, I
+               I didn't enjoy doing Material Science. It is however fun to stay in touch 
+               with the field to look out for new innovations and research. 
+               However, I developed some interest for ML.
+               I took a few courses online during my sophomor summers, and continued 
+               to pursue studying it in my further semesters. 
