--- a/_data/other-skills.yml
+++ b/_data/other-skills.yml
@@ -1,7 +1,11 @@
-- name: Adobe Photoshop
+- name: Data Science
   percentage: 95
   color: info
 
-- name: Adobe Illustrator
-  percentage: 90
+- name: LLM stack
+  percentage: 85
+  color: secondary
+
+- name: Deep Learning
+  percentage: 70
   color: success
